/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.ats.dda;

import "google/protobuf/duration.proto";
import "src/devtools/mobileharness/api/model/proto/job.proto";
import "src/devtools/mobileharness/api/query/proto/lab_query.proto";

option java_package = "com.google.devtools.mobileharness.infra.ats.dda.proto";
option java_outer_classname = "SessionPluginProto";

message AtsDdaSessionPluginConfig {
  // Required.
  //
  // Requirements of the device.
  mobileharness.api.model.DeviceRequirement device_requirement = 1;

  // Optional.
  //
  // If empty, the timeout will be the default timeout. If present, the timeout
  // will be the minimum of this one and the default one.
  google.protobuf.Duration dda_timeout = 2;
}

message AtsDdaSessionPluginOutput {
  // Optional.
  //
  // Becomes present when the device is allocated.
  mobileharness.api.query.DeviceInfo allocated_device = 1;
}

message AtsDdaSessionNotification {
  oneof notification {
    CancelSession cancel_session = 1;
    HeartbeatSession heartbeat_session = 2;
  }
}

message CancelSession {}

message HeartbeatSession {}
